service-ilb-conversion.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-svc-conversion
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: currency-conversion
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8100
    targetPort: 8100
