service-ilb-exchange.yaml
apiVersion: v1
kind: Service
metadata:
  name: ilb-svc
  annotations:
    networking.gke.io/load-balancer-type: "Internal"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Cluster
  selector:
    app: currency-exchange
  ports:
  - name: tcp-port
    protocol: TCP
    port: 8000
    targetPort: 8000
